CR-2004-02-09-1: Bugfix:    Fixed compile problem for AMD64

AS-2004-02-06-1  Bugfix:    pass -Wno-strict-prototypes to gcc on Linux
                            to compile sec_lib.c without error
                            (introduced -Wstrict-prototypes for all Linuxes
                            with AS-2004-02-06-1)

CR-2004-02-09-0: Testsuite: Fixed install_core_system test on hosts where
                            no local spool directory is defined.

AA-2004-02-09-0: Bugfix:    wrong define in basis_types.h leads to execd
                            crash
                 Changed:   all
                 Review:    SG

SG-2004-02-09-0: Bugfix:    - qstat -urg crashed
                            - added "-urg" to the qstat -help output
                            - qstat -ext -xml did not display ticket information
                 Changed:   qstat
                 Review:    AA

AD-2004-02-08-0: Bugfix:    Make over of the event master (evm) external
                            interface. This is needed in preparation for
                            a self-contained event master module.
                 Issue:     656
                 Changed:   qmaster, evm

AS-2004-02-06-1  Enhancem.: define cleanup, IA64 and AMD64 port begin"

AS-2004-02-06-0  Enhancem.: aimk cleanup
                            Introduce define -DTARGET_32BIT or -DTARGET_64BIT
                            use only one section for Linux (except SLINUX)

SG-2004-02-06-1: Enhancem.: updated the complex man page.
                 Changed:   submit.1, complex.5

CR-2004-02-06-1: Bugfix:    Fixed broken build for linux
                 Changed:   sec_lib.c

CR-2004-02-06-0: Bugfix:    Gridengine system with csp feature not working
                            -  modified csp feature for new communication
                 Issue:     657      
                 Changed:   all binaries, install scripts, japi
                 Review:    AA
