@@ -1,3 +1,5 @@
+JG-2004-02-09-0: Testsuite: Enable testsuite installation on aix51.
+
 CR-2004-02-09-1: Bugfix:    Fixed compile problem for AMD64
 
 AS-2004-02-06-1  Bugfix:    pass -Wno-strict-prototypes to gcc on Linux
